<resources>
    <string name="app_name">WorkoutKeeper</string>
    <string name="title_rmCounter">RM Counter</string>
    <string name="title_anatomical">Anatomical</string>
    <string name="title_activity_training">Training Recipe</string>
    <string name="training_text">TrainingView</string>
    <string name="RM">RMCalculator</string>
    <string name="RM_100">100% (Maximum)</string>
    <string name="RM_95">95% (Strength)</string>
    <string name="RM_90">90% (Power)</string>
    <string name="RM_80">80% (Muscle)</string>
    <string name="RM_70">70% (Stamina)</string>
    <string name="RM_50">50% (Explosiveness)</string>
    <string name="RM_weight">            Weight            </string>
    <string name="RM_repetition_times">Repetition times</string>
    <string name="title_rm">RM</string>
    <string name="title_calculator">calculator</string>
    <string-array name="chest_recipe_titles">
        <item>Barbell Chest Press</item>
        <item>Dumbbell Chest Press</item>
        <item>Chest Fly</item>
        <item>Incline Barbell Chest Press</item>
        <item>Incline Dumbell Chest Press</item>
        <item>Incline Chest Fly</item>
        <item>Decline Barbell Chest Press</item>
        <item>Decline Dumbell Chest Press</item>
        <item>Decline Chest Fly</item>
        <item>Push Up</item>
    </string-array>
    <string-array name="chest_recipe_info">
        <item>Use barbell to train your chest.</item>
        <item>Use dumbbell to train your chest.</item>
        <item>Use cable or machine to train your chest.</item>
        <item>Use barbell to train your upper chest.</item>
        <item>Use dumbbell to train your upper chest.</item>
        <item>Use cable or machine to train your upper chest.</item>
        <item>Use barbell to train your lower chest.</item>
        <item>Use dumbbell to train your lower chest.</item>
        <item>Use cable or machine to train your lower chest.</item>
        <item>Leaning over and push up to train your chest</item>
    </string-array>
    <string-array name="chest_recipe_youtube">
        <item>KHyTxCBJiVY</item>
        <item>muf8FREy2BE</item>
        <item>jpfOkOs2Ee4</item>
        <item>0VXi_cmmLoU</item>
        <item>9Js4_q88r9A</item>
        <item>jpfOkOs2Ee4</item>
        <item>KHyTxCBJiVY</item>
        <item>muf8FREy2BE</item>
        <item>jpfOkOs2Ee4</item>
        <item>KHyTxCBJiVY</item>
    </string-array>
    <string-array name="shoulder_recipe_titles">
        <item>Shoulder Press</item>
        <item>Front Raise</item>
        <item>Lateral Raise</item>
        <item>Cable Side Delt Fly</item>
        <item>Dumbbell Reverse Fly</item>
        <item>Machine Reverse Fly</item>
        <item>Handstand Push Up</item>
    </string-array>
    <string-array name="shoulder_recipe_info">
        <item>Seated(Standing) and push barbell or dumbbell to train your front deltoid.</item>
        <item>Seated(Standing) and raise dumbbell to train your front deltoid.</item>
        <item>Seated(Standing) and raise dumbbell to train your side deltoid.</item>
        <item>Use cable to train your side deltoid.</item>
        <item>Leaning forward and use dumbbell to train your rear deltoid.</item>
        <item>Use cable or machine to train your rear deltoid.</item>
        <item>Leaning over and push up to train your shoulder</item>
    </string-array>
    <string-array name="shoulder_recipe_youtube">
        <item>9EkHLHJNJnk</item>
        <item>9EkHLHJNJnk</item>
        <item>9EkHLHJNJnk</item>
        <item>9EkHLHJNJnk</item>
        <item>9EkHLHJNJnk</item>
        <item>9EkHLHJNJnk</item>
        <item>9EkHLHJNJnk</item>
    </string-array>
    <string-array name="back_recipe_titles">
        <item>Narrow Pull Up</item>
        <item>Wide Pull Up</item>
        <item>Lat Pull Down</item>
        <item>Seated Row</item>
        <item>Bent Row</item>
        <item>T Raises</item>
        <item>Single-Arm Dumbbell Row</item>
        <item>Back Extension</item>
    </string-array>
    <string-array name="back_recipe_info">
        <item>Pull up with holding narrowly.</item>
        <item>Pull up with holding widely.</item>
        <item>Use a machine with lat-bar and pull down.</item>
        <item>Seat and pulling row machine bar toward your body.</item>
        <item>Leaning forward with holding a barbell and pull it toward your abdomen.</item>
        <item>Leaning forward and keeping arms straight, lift weights up to shoulder height then lower back down.</item>
        <item>Holding a dumbbell in one hand, bend knees on a bench, and shift hips back. Draw the weight up toward chest.</item>
        <item>Bent your waist with keeping your upper back straight, then holding a barbell and move your waist straight.</item>
    </string-array>
    <string-array name="back_recipe_youtube">
        <item>zLPhkfJpQCI</item>
        <item>zLPhkfJpQCI</item>
        <item>zLPhkfJpQCI</item>
        <item>zLPhkfJpQCI</item>
        <item>zLPhkfJpQCI</item>
        <item>zLPhkfJpQCI</item>
        <item>zLPhkfJpQCI</item>
        <item>zLPhkfJpQCI</item>
    </string-array>
    <string-array name="abs_recipe_titles">
        <item>Hardstyle Plank</item>
        <item>Dead Bug</item>
        <item>Hollow Extension-To-Cannonball</item>
        <item>Dumbbell Side Bend</item>
        <item>Crossover Curl</item>
        <item>Decline Curl</item>
    </string-array>
    <string-array name="abs_recipe_info">
        <item>Lying face down on the ground, prop yourself up into a forearm plank position.</item>
        <item>Lay on the floor with arms straight above your shoulders.
            To start, bring your knees directly over your hips and touch your foot with diag-hand.</item>
        <item>Lay on the floor and curl your body like a ball with hands embrace your knees.</item>
        <item>Holding a dumbbell with one hand and curl your body toward the empty-hand side.</item>
        <item>Holding a plate and curl your abdomen, then twist your abs toward left and right repeatedly. </item>
        <item>Lay on a decline bench and curl your abs upward to make your elbows touching your knees.</item>
    </string-array>
    <string-array name="abs_recipe_youtube">
        <item>DTPqUJAMt3w</item>
        <item>DTPqUJAMt3w</item>
        <item>DTPqUJAMt3w</item>
        <item>DTPqUJAMt3w</item>
        <item>DTPqUJAMt3w</item>
        <item>DTPqUJAMt3w</item>
    </string-array>
    <string-array name="leg_recipe_titles">
        <item>Squat</item>
        <item>Bodyweight Squats</item>
        <item>Deadlift</item>
        <item>Reverse Lunges With Knee Lifts</item>
        <item>Squat Jumps</item>
        <item>Side Lunges</item>
        <item>Single-Leg Calf Raises</item>
        <item>Leg Press</item>
        <item>Leg Extension</item>
        <item>Leg Curl</item>
        <item>Hip Adduction</item>
        <item>Hip Abduction</item>
    </string-array>
    <string-array name="leg_recipe_info">
        <item>Put a barbell on your trapezius and hold it tightly, then straight your back and squat slowly.</item>
        <item>Stand with your feet about shoulder-width apart and slightly turned out with your weight in your heels.
            Hinge forward at your hips and sit your butt back into a squat.</item>
        <item>Leaning forward with holding a barbell with back straight and lift it until your body straight.</item>
        <item>Start standing with your feet about shoulder-width apart.
            Step backwards with your left foot, landing on the ball of your foot and bending both knees to create two 90-degree angles.
            Push through your right heel to return to standing. Repeat on the other side.</item>
        <item>Stand with your feet slightly wider than hip-width apart. Squat slowly and jump.</item>
        <item>Stand with your feet hip-width apart. Take a big step out to your right.
            Bend your right knee and push your butt back, keeping your left leg straight. Repeat on the other side.</item>
        <item>Stand with your feet hip-width apart.
            Raise your left knee to hip level, toes pointed, hands on hips or behind your head.
            Hold for three seconds, then lower the heel back down. Repeat on the other side.</item>
        <item>Sit on a machine and push the machine with your leg.</item>
        <item>Sit on a machine and lift the weighted machine up with your Quadriceps.</item>
        <item>Lift the weighted machine with your biceps femoris.</item>
        <item>Training your Adductor muscle.</item>
        <item>Training your Abductor muscle.</item>
    </string-array>
    <string-array name="leg_recipe_youtube">
        <item>TaM2sgxOduU</item>
        <item>TaM2sgxOduU</item>
        <item>Td_pWCfQzWg</item>
        <item>TaM2sgxOduU</item>
        <item>TaM2sgxOduU</item>
        <item>TaM2sgxOduU</item>
        <item>TaM2sgxOduU</item>
        <item>TaM2sgxOduU</item>
        <item>TaM2sgxOduU</item>
        <item>TaM2sgxOduU</item>
        <item>TaM2sgxOduU</item>
        <item>TaM2sgxOduU</item>
    </string-array>
    <string-array name="arm_recipe_titles">
        <item>Biceps Curl</item>
        <item>Bent over dumbbell row</item>
        <item>Incline Biceps Curl</item>
        <item>Tricep Kickbacks</item>
        <item>Tricep Extension</item>
    </string-array>
    <string-array name="arm_recipe_info">
        <item>Hold two dumbbell, keeping your elbows steady and curl your arm to really work the bicep.</item>
        <item>Leaning forward, keeping your elbows steady and bent your arm to train your bicep.</item>
        <item>Lay on a incline bench, keeping your elbows steady and bent your arm to train your bicep.</item>
        <item>The area you really want to tone up for when you are waving.</item>
        <item>Extends your arm, keeping your elbow steady and train your tricep.</item>
    </string-array>
    <string-array name="arm_recipe_youtube">
        <item>SEpSqPvoaYg</item>
        <item>SEpSqPvoaYg</item>
        <item>SEpSqPvoaYg</item>
        <item>x1U_fV0uScM</item>
        <item>x1U_fV0uScM</item>
    </string-array>
    <string-array name="predefine_menu_titles">
        <item>Chest Day</item>
        <item>Back Day</item>
        <item>Leg Day</item>
        <item>Shoulder Day</item>
        <item>Arm Day</item>
        <item>ABS Day</item>
    </string-array>
    <string-array name="sets_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="reps_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string-array name="weights_array">
        <item>KG</item>
        <item>LB</item>
    </string-array>
    <string name="confirm_show_me">SHOW ME</string>
    <string name="toolbar_timer">Timer</string>
    <string name="addtimer_minutes">Minutes</string>
    <string name="addtimer_seconds">Seconds</string>
    <string name="addtimer_set">Set</string>
    <string name="setting_go">GO !</string>
    <string name="setting_demo_video">Demo Video</string>
    <string name="setting_rest_time">Rest Time</string>
    <string name="setting_reps">Reps</string>
    <string name="setting_sets">Sets</string>
    <string name="setting_weights">Weights</string>
</resources>