<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RMShowActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_rm"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="36sp"
            android:textStyle="bold" />
        <LinearLayout
            android:id="@+id/LinearRmShow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/LinearRmShow2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/RM_100"
                android:textSize="30sp" />
            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30sp"
                android:gravity="right"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearRmShow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/LinearRmShow3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/RM_95"
                android:background="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:textSize="29sp" />
            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:textSize="29sp"
                android:gravity="right"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearRmShow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/LinearRmShow4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/RM_90"
                android:textSize="28sp" />
            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="28sp"
                android:gravity="right"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearRmShow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/LinearRmShow5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/RM_80"
                android:background="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:textSize="27sp" />
            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:background="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:textSize="27sp"
                android:gravity="right"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearRmShow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/LinearRmShow6"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/RM_70"
                android:textSize="26sp" />
            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="26sp"
                android:gravity="right"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearRmShow6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/RM_50"
                android:background="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:textSize="25sp" />
            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="right"
                android:background="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:text="" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>